# TIOE4140-Project-Evaluation-and-Financing

./: .gitignore  pyproject.toml
ex/1/: main.ipynb  outputs.tex
ex/2/: main.ipynb  main.tex  outputs.tex
ex/3/: main.ipynb
ex/4/: binomial_tree.tex  main.ipynb  main.tex
ex/5/: main.ipynb  main.tex
ex/6/: main.ipynb  main.tex
ex/7/: main.ipynb  main.tex
ex/extended/: 2.ipynb  3.ipynb  binomial_tree.tex  code.ipynb  full_document.tex
latex_markdown_output/: conf.json  index.tex.j2
