[project]
name = "prosjfin"
version = "0.1.0"
description = ""
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "jinja2>=3.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "nbconvert>=7.16.5",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
    "yfinance>=0.2.54",
]
